# edgeai-tensorlab

./: .gitignore  Dockerfile  LICENSE  LICENSE.md  README.md  README.txt  README_2d_od.md  README_6d_pose.md  README_6dpose.md  README_Pixel2Pixel.md  README_edgeailite.md  README_mmdet3d.md  accuracy_base.yaml  accuracy_base_full.yaml  accuracy_base_minimal.yaml  accuracy_fixedres_internal.yaml  accuracy_full.yaml  accuracy_full_pc.yaml  accuracy_import_for_j7.yaml  accuracy_import_infer_pc.yaml  accuracy_infer_on_j7.yaml  accuracy_minimal_base.yaml  accuracy_minimal_pc.yaml  accuracy_modelzoo_base.yaml  accuracy_pc.yaml  conda_install.sh  conf.py  config_classification.yaml  config_detection.yaml  config_keypoint_detection.yaml  config_segmentation.yaml  config_settings.py  default_settings.py  disable_plugins_gpl.sh  docker_build.sh  docker_run.sh  docker_run_gpu.sh  download_datasets.sh  download_lmo.sh  download_ycb.sh  (+108 more)
benchmarkutils/: setup.py  setup.sh
configs/: __init__.py  classification.py  classification_experimental.py  classification_v2.py  depth_estimation.py  detection.py  detection_3d.py  detection_3d_experimental.py  detection_additional.py  detection_experimental.py  detection_v2.py  face_detection.py  face_detection_experimental.py  high_resolution.py  human_pose_estimation.py  human_pose_estimation_experimental.py  lidar_3d_detection.py  miscllaneous.py  object_6d_pose_estimation.py  segmentation.py  segmentation_experimental.py  stereo_disparity_experimental.py
configs_edgeailite/: yoloxpose_s_lite-640.py  yoloxpose_tiny_lite-416.py
data/: readme.txt
datasets/: animal_classification.zip.link  animal_detection.zip.link  coco2017_ccby_subset_s8.zip.link  deeppcb_defect_detection.zip.link  tiscapes2017_driving.zip.link
dependencies/: edgeai-benchmark  readme.txt
deprecated/: download_datasets.py  download_datasets.sh
docker/: Dockerfile  docker_build.sh  docker_run.sh  docker_run_cpu.sh  docker_run_gpu.sh  proxy_setup.sh  udocker_build.sh  udocker_run.sh  udocker_setup.sh
docs/: Makefile  artifacts.rst  conf.py  custom_models.md  datasets.md  depth_estimation.md  det3d_modelzoo.md  det3d_quantization.md  det3d_release_notes.md  det3d_usage.md  det_model_zoo.md  det_modelzoo.md  det_quantization.md  det_usage.md  http_server.sh  image_classification.md  jacinto_ai_detection_model_zoo.md  jacinto_ai_detection_usage.md  jacinto_ai_quantization_aware_training.md  model_zoo.md  modelartifacts.rst  object_detection.md  precompiled_modelartifacts.md  release_notes.md  setup_instructions.md  usage.md  usage_evm.md
edgeai-benchmark/: .gitignore  LICENSE  LICENSE.md  LICENSE_ADDITIONAL  README.md  pyproject.toml  requirements.txt  requirements_evm.txt  requirements_pc.txt  run_benchmarks_evm.sh  run_benchmarks_j7.sh  run_benchmarks_parallelbash_pc.sh  run_benchmarks_pc.sh  run_custom_pc.sh  run_generate_configs.sh  run_generate_report.sh  run_model_import_pc.sh  run_model_infer_pc.sh  run_nuscenes_unzip.sh  run_package_artifacts_evm.sh  run_package_artifacts_for_evm.sh  run_set_target_device.sh  run_set_target_machine.sh  run_tutorials_notebook_pc.sh  run_tutorials_pc.sh  run_tutorials_script_pc.sh  settings_base.yaml  settings_import_on_pc.yaml  settings_infer_on_evm.yaml  settings_infer_on_j7.yaml  setup.py  setup.sh  setup_evm.sh  setup_pandaset.sh  setup_pc.sh  setup_pc_gpu.sh  version.py
edgeai-datasets/: LICENSE  README.md  run_make_links.sh  run_make_release.sh  version.py
edgeai-hf-transformers/: .gitignore  LICENSE  README.md  llm_inference.ipynb  run_image_classification_train.sh  run_object_detection_test.sh  run_object_detection_train.sh  run_semantic_segmentation_test.sh
edgeai-mmdeploy/: setup.sh
edgeai-mmdetection/: .gitignore  LICENSE  README.md  make_release.sh  run_detection_export.sh  run_detection_test.sh  run_detection_train.sh  setup.sh  setup_cpu.sh
edgeai-mmdetection3d/: .gitignore  LICENSE  README.md  README_mmdet3d.md  setup.sh
edgeai-mmpose/: LICENSE  setup.sh  setup_cpu.sh
edgeai-modelmaker/: README.md  __init__.py  config_detection.yaml  requirements.txt  requirements_freeze.txt  run_download_all.sh  setup.py  (+5 more)
tools/: create_data.py  demo.py  deploy.py  dist_test.sh  dist_train.sh  eval.py  export_onnx.py  linemod2coco.py  linemod_pbr2coco.py  lmo2coco.py  merge_json.py  pyproject.toml  run_test.sh  setup.py  test.py  tless2coco.py  torch2onnx.py  train.py  ycb2coco.py  ycb2tless.py
tools/data_converter/: kitti_converter.py  kitti_data_utils.py  kitti_painting.py
tools/dataset_converters/: generate_fastbev_sweep_pkl.py  generate_petrv2_sweep_pkl.py  kitti_data_utils.py  kitti_painting.py  nuscenes_ad_converter.py  nuscenes_converter.py  pandaset_converter.py  update_ad_infos_to_v2.py  update_infos_to_v2.py
tools/deployment/: pytorch2onnx.py  pytorch2proto.py
tools/kmeans/: kmeans_det.py  kmeans_map.py  kmeans_motion.py  kmeans_plan.py
tools/requirements/: requirements_11.0.txt
tools/tidl_tools_package/: __init__.py  download.py  version.py
tools/tidl_tools_package/requirements/: requirements_10.0.txt  requirements_10.1.txt  requirements_11.0.txt  requirements_11.1.txt  requirements_11.2.txt
tools/tidl_tools_runner/: __init.py__  basert_runner.py  config_dict.py  onnxrt_runner.py  presets.py  runtime_options.py  tflitert_runner.py  tvmdlr_runner.py
tools/v1/: linemod2coco.py
(+6551 files in other folders)
